--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,7 @@ name: Steven M. Crawford
 description: Astronomer wandering through time and space
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://pbs.twimg.com/profile_images/661017305770405888/uEEeVxD4.jpg
-
+avatar: https://github.com/crawfordsm/crawfordsm.github.io/blob/master/images/profile_hike.jpg
 #
 # Flags below are optional
 #
