--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@ name: Steven M. Crawford
 description: Astronomer wandering through time and space
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://github.com/crawfordsm/crawfordsm.github.io/blob/master/images/profile_hike.jpg
-#
+avatar: https://raw.githubusercontent.com/crawfordsm/crawfordsm.github.io/a6fa9e79d86f364fcc2dda0d34cf13a5fd677a38/images/profile_hike.jpg
+
 # Flags below are optional
 #
 
