trying to add mastodon icon

--- a/_config.yml
+++ b/_config.yml
@@ -17,19 +17,21 @@ avatar: https://raw.githubusercontent.com/crawfordsm/crawfordsm.github.io/a6fa9e
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email: 
+  email: crawfordsm@gmail.com
   facebook:
   flickr:
   github: crawfordsm
-  instagram:
-  linkedin:
+  instagram: astrocrawford
+  linkedin: astrocrawford
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: astrocrawford
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
-  googleplus: +SteveCrawford_astronomer # anything in your profile username that comes after plus.google.com/
-
+  googleplus: # anything in your profile username that comes after plus.google.com/
+  mastodon: 
+  - username: crawfordsm
+    instance: mastodon.social
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
 # You can find your shortname on the Settings page of your Disqus account
